issues with overflow still

--- a/src/components/displays/displayStyles.css
+++ b/src/components/displays/displayStyles.css
@@ -11,8 +11,8 @@
 #languageDisplay {
     display: flex;
     flex-direction: column;
-    width: 160px;
-    height: 150px;
+    width: fit-content;
+    height: fit-content;
     padding: 10px;
     border-radius: 20px;
     align-items: center;
