--- a/src/pages/pageStyle.css
+++ b/src/pages/pageStyle.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-height: 95%;
 }
 
 #btnDiv {
@@ -15,12 +16,16 @@
 
 #iconDiv {
     gap: 20px;
-    width: 90%;
     display: flex;
+    max-width: 90%;
+    width: fit-content;
     overflow-x: scroll;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     margin: 20px;
+    align-self: center;
+    align-content: center;
 }
 
 #videoDiv {
@@ -32,4 +37,5 @@
     width: 100%;
     overflow-x: scroll;
     scrollbar-color: white;
+    border-radius: 20px;
 }
